add image & landing page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
     </div>
   </section>
   <!-- End Header -->
+
+   <!-- Hero Section  -->
+   <section id="hero">
+    <div class="hero container">
+      <div>
+        <h1>Tournez vous vers de nouveaux horizons <span></span></h1>
+        <h1>Grâce à l'IA !<span></span></h1>
+        <a href="#" type="button" class="cta">En Savoir Plus</a>
+      </div>
+    </div>
+  </section>
+  <!-- End Hero Section  -->
     
 </body>
 </html>
