Add Event Modal

--- a/index.html
+++ b/index.html
@@ -43,11 +43,25 @@
       <div>
         <h1>Tournez vous vers de nouveaux horizons <span></span></h1>
         <h1>Grâce à l'IA !<span></span></h1>
-        <a href="#" type="button" class="cta">En Savoir Plus</a>
+        <a href="#" type="button" class="cta" id="openmodal">En Savoir Plus</a>
       </div>
+      <!-- Event Modal  -->
+      <dialog id="modal">
+        <h2>EVENEMENT !</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
+          magni et...
+        </p>
+        <button id="closemodal">Fermer</button>
+        <a href="event.html" type="button" class="cta-event" >C'est Parti !</a>
+     </dialog>
+     <!-- End Event Modal  -->
     </div>
+    
+    
   </section>
   <!-- End Hero Section  -->
+
+  
 
   <!-- Service Section -->
   <section id="services">
