--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="bar"></div>
           </div>
           <ul>
-            <li><a href="#" data-after="Home">Accueil</a></li>
+            <li><a href="index.html" data-after="Home">Accueil</a></li>
             <li><a href="#" data-after="Service">Formations</a></li>
             <li><a href="#" data-after="Projects">Projets</a></li>
-            <li><a href="#" data-after="Projects">Événements </a></li>
+            <li><a href="event.html" data-after="Projects">Événements </a></li>
             <li><a href="#" data-after="About">À propos </a></li>
             <li><a href="#" data-after="Contact">Contact</a></li>
           </ul>
@@ -43,13 +43,12 @@
       <div>
         <h1>Tournez vous vers de nouveaux horizons <span></span></h1>
         <h1>Grâce à l'IA !<span></span></h1>
-        <a href="#" type="button" class="cta" id="openmodal">En Savoir Plus</a>
+        <a href="#" type="button" class="cta" id="openmodal">ÉVÈNEMENT À VENIR !</a>
       </div>
       <!-- Event Modal  -->
       <dialog id="modal">
-        <h2>EVENEMENT !</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
-          magni et...
+        <h2>À Ne Pas Manquer !</h2>
+        <p>Événements Nationaux : L'Opportunité de Se Connecter et d'Apprendre
         </p>
         <button id="closemodal">Fermer</button>
         <a href="event.html" type="button" class="cta-event" >C'est Parti !</a>
@@ -138,11 +137,9 @@
       <div class="col-right">
         <h1 class="section-title">À<span> Propos</span></h1>
         <h2>Ce que nous pouvons vous apporter</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
-          repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
-          exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
-          Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-          reprehenderit libero enim!</p>
+        <p>L'Association Nationale de Connexion et d'Apprentissage s'engage à fournir une plateforme dynamique et enrichissante pour les professionnels et les individus désireux d'améliorer leurs compétences, d'élargir leurs horizons et de développer leur réseau.
+          En outre, en étant membre de l'Association Nationale de Connexion et d'Apprentissage, vous faites partie d'une communauté dynamique et collaborative qui favorise la croissance professionnelle, l'échange d'idées et l'exploration continue des opportunités.
+        </p>
         <a href="#" class="cta">Contactez Nous !</a>
       </div>
     </div>
@@ -190,7 +187,7 @@
       <div class="brand">
         <h1><span>AI</span>cademy</h1>
       </div>
-      <h2>Elargisez vos horizons !</h2>
+      <h2>Élargissez vos horizons !</h2>
       <div class="social-icon">
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
