--- a/event.html
+++ b/event.html
@@ -1,11 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="event.css">
+  <title>Association Educative grâce à l’intelligence artificielle</title>
 </head>
+
 <body>
-    
+  <!-- Header -->
+  <section id="header">
+    <div class="header container">
+      <div class="nav-bar">
+        <div class="brand">
+          <a href="#hero">
+            <h1><span>AI</span>cademy</h1>
+          </a>
+        </div>
+        <div class="nav-list">
+          <div class="hamburger">
+            <div class="bar"></div>
+          </div>
+          <ul>
+            <li><a href="index.html" data-after="Home">Accueil</a></li>
+            <li><a href="#" data-after="Service">Formations</a></li>
+            <li><a href="#" data-after="Projects">Projets</a></li>
+            <li><a href="event.html" data-after="Projects">Événements </a></li>
+            <li><a href="#" data-after="About">À propos </a></li>
+            <li><a href="#" data-after="Contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Header -->
+
+
+  <!-- Hero Section  -->
+  <section id="hero">
+    <div class="hero container">
+      <div>
+        <h1>Événements Nationaux : L'Opportunité de Se Connecter et d'Apprendre <span></span></h1>
+        <p>01-02-2049 <br><br> 8 AM-10 AM</p>
+      </div>
+    </div>
+  </section>
+  <!-- End Hero Section  -->
+
+  
+
+  <!-- Service Section -->
+  <section id="services">
+    <div class="services container">
+      <div class="service-top">
+        <h1 class="section-title">Ce que vous devez<span> Savoir !</span></h1>
+        <p>Le Congrès National de Connexion et d'Apprentissage 2023 est la rencontre incontournable de l'année pour les esprits avides de connaissances, les professionnels ambitieux et les curieux de tout horizon. Cet événement rassemble des participants de tous les coins du pays pour une expérience enrichissante axée sur la connexion, l'apprentissage et l'inspiration.</p>
+      </div>
+      <div class="service-bottom">
+        <div class="service-item">
+          <div class="icon"><img src="img/Kerfin7_NEA_2478.jpg" /></div>
+          <h2>Conférenciers Éminents</h2>
+          <p>Écoutez des conférenciers de renommée mondiale, des chercheurs et des experts de l'IA partager leurs idées visionnaires et leurs perspectives sur les développements actuels et futurs de l'IA.</p>
+        </div>
+        <div class="service-item">
+          <div class="icon"><img src="img/4695798.jpg" /></div>
+          <h2>Sessions Pratiques</h2>
+          <p>Participez à des ateliers interactifs et des sessions pratiques animés par des professionnels expérimentés pour approfondir vos compétences en IA, des bases aux concepts avancés.</p>
+        </div>
+        <div class="service-item">
+          <div class="icon"><img src="img/6620122.jpg" /></div>
+          <h2>Concours de Projets</h2>
+          <p>Participez ou assistez au concours de projets d'IA où des équipes présentent leurs créations novatrices, des chatbots intelligents aux systèmes d'apprentissage profond.</p>
+        </div>
+        <div class="service-item">
+          <div class="icon"><img src="img/5799725.jpg" /></div>
+          <h2>Cérémonie de Remise de Prix</h2>
+          <p>Célébrez les réalisations exceptionnelles de chercheurs, d'entrepreneurs et de leaders qui ont façonné le paysage de l'IA, lors d'une cérémonie de remise de prix prestigieuse.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Service Section -->
+
+
+  <!-- About Section -->
+  <section id="about">
+    <div class="about container">
+      <div class="col-right">
+        <h1 class="section-title">LE MOT<span> DE LA FIN</span></h1>
+        <h2>Rejoignez-nous au Congrès National de Connexion et d'Apprentissage 2049</h2>
+        <p>Saisissez l'opportunité de se connecter avec des esprits brillants, d'apprendre de leaders inspirants et de forger des liens durables qui vous propulseront vers un avenir empreint de succès et de croissance professionnelle !</p>
+        <a href="#" class="cta">Inscrivez vous !</a>
+        <p>Les inscriptions sont maintenant ouvertes. <br>
+            Rejoignez-nous pour cette expérience unique d'apprentissage et de connexion.</p>
+      </div>
+    </div>
+  </section>
+  <!-- End About Section -->
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="contact container">
+      <div>
+        <h1 class="section-title">Contactez <span>nous</span></h1>
+      </div>
+      <div class="contact-items">
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+          <div class="contact-info">
+            <h1>Télépone</h1>
+            <h2>+00000000</h2>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+          <div class="contact-info">
+            <h1>Email</h1>
+            <h2>info@gmail.com</h2>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
+          <div class="contact-info">
+            <h1>Adresse</h1>
+            <h2>Ici et là, qui sait </h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Contact Section -->
+
+  <!-- Footer -->
+  <section id="footer">
+    <div class="footer container">
+      <div class="brand">
+        <h1><span>AI</span>cademy</h1>
+      </div>
+      <h2>Élargissez Vos Horizons !</h2>
+      <div class="social-icon">
+        <div class="social-item">
+          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+        </div>
+        <div class="social-item">
+          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+        </div>
+      </div>
+      <p>Copyright © 2023 AIcademy. Tous droits réservés</p>
+    </div>
+  </section>
+  <!-- End Footer -->
+  <script src="./app.js"></script>
 </body>
+
 </html>
