--- a/event.html
+++ b/event.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="event.css">
   <title>Association Educative grâce à l’intelligence artificielle</title>
+  <meta name="description" content="Participez à l'événement national incontournable : Événements Nationaux - L'Opportunité de Se Connecter et d'Apprendre. Découvrez comment l'intelligence artificielle révolutionne l'éducation grâce à des conférences inspirantes, des ateliers innovants et des opportunités de réseautage exceptionnelles.">
+
 </head>
 
 <body>
@@ -59,22 +61,22 @@
       </div>
       <div class="service-bottom">
         <div class="service-item">
-          <div class="icon"><img src="img/Kerfin7_NEA_2478.jpg" /></div>
+          <div class="icon"><img src="img/Kerfin7_NEA_2478.jpg" alt="Conférenciers éminents partageant des idées sur l'intelligence artificielle"/></div>
           <h2>Conférenciers Éminents</h2>
           <p>Écoutez des conférenciers de renommée mondiale, des chercheurs et des experts de l'IA partager leurs idées visionnaires et leurs perspectives sur les développements actuels et futurs de l'IA.</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="img/4695798.jpg" /></div>
+          <div class="icon"><img src="img/4695798.jpg" alt="Atelier interactif pour approfondir les compétences en IA"/></div>
           <h2>Sessions Pratiques</h2>
           <p>Participez à des ateliers interactifs et des sessions pratiques animés par des professionnels expérimentés pour approfondir vos compétences en IA, des bases aux concepts avancés.</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="img/6620122.jpg" /></div>
+          <div class="icon"><img src="img/6620122.jpg" alt="Concours de projets d'IA mettant en avant des créations novatrices"/></div>
           <h2>Concours de Projets</h2>
           <p>Participez ou assistez au concours de projets d'IA où des équipes présentent leurs créations novatrices, des chatbots intelligents aux systèmes d'apprentissage profond.</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="img/5799725.jpg" /></div>
+          <div class="icon"><img src="img/5799725.jpg" alt="Cérémonie de remise de prix pour célébrer les réalisations en intelligence artificielle"/></div>
           <h2>Cérémonie de Remise de Prix</h2>
           <p>Célébrez les réalisations exceptionnelles de chercheurs, d'entrepreneurs et de leaders qui ont façonné le paysage de l'IA, lors d'une cérémonie de remise de prix prestigieuse.</p>
         </div>
