--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Association Educative grâce à l’intelligence artificielle</title>
+  <meta name="description" content="Découvrez l'AIcademy, l'association éducative révolutionnaire propulsée par l'intelligence artificielle, offrant des formations novatrices, des projets stimulants et des opportunités de connexion pour élargir vos horizons professionnels et personnels.">
+
 </head>
 
 <body>
   <!-- Header -->
-  <section id="header">
+  <header id="header">
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
@@ -33,7 +35,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </header>
   <!-- End Header -->
 
 
@@ -48,8 +50,7 @@
       <!-- Event Modal  -->
       <dialog id="modal">
         <h2>À Ne Pas Manquer !</h2>
-        <p>Événements Nationaux : L'Opportunité de Se Connecter et d'Apprendre
-        </p>
+        <p>Événements Nationaux : L'Opportunité de Se Connecter et d'Apprendre <br> Le 01-02-2049 </p>
         <button id="closemodal">Fermer</button>
         <a href="event.html" type="button" class="cta-event" >C'est Parti !</a>
      </dialog>
